Fix `.component` inner spacing

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1955,12 +1955,16 @@ input[type=range] {
       margin-left: 15.875rem; } }
 
 .component {
-  overflow: auto;
   margin-bottom: 1rem;
   padding: 1.5rem;
   border-radius: 3px;
   background-color: #fff;
   box-shadow: rgba(240, 240, 240, 0.25) 1px 1px 9px 3px; }
+  .component::before, .component::after {
+    display: table;
+    content: ' '; }
+  .component::after {
+    clear: both; }
 
 .caption {
   margin-bottom: 1rem;
